# SoFix

./: README.md  build.gradle  settings.gradle
androidSoFix/: build.gradle  gradle.properties  publish.gradle
androidSoFix/src/androidTest/java/com/wy/sofix/: ReflectUtilTest.java  SoFixTest.java
androidSoFix/src/androidTest/java/com/wy/sofix/compat/: NativeLibraryDirectoriesCompatTest.java
androidSoFix/src/main/java/com/wy/sofix/: Extractor.java  SoFix.java
androidSoFix/src/main/java/com/wy/sofix/compat/: ApplicationInfoCompat.java  NativeLibraryDirectoriesCompat.java
androidSoFix/src/main/java/com/wy/sofix/loader/: SoLoader.java
androidSoFix/src/main/java/com/wy/sofix/utils/: ReflectUtil.java
androidSoFix/src/test/java/com/wy/sofix/utils/: IoUtilTest.java
app/: CMakeLists.txt  build.gradle
app/src/androidTest/: AndroidManifest.xml
app/src/androidTest/java/com/wy/sofix/: ExampleInstrumentedTest.java
app/src/androidTest/java/com/wy/sofix/app/: SoFixApplicationTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-lib.cpp
app/src/main/java/com/wy/sofix/: NativeLib.java
app/src/main/java/com/wy/sofix/activities/: MainActivity.java
app/src/main/java/com/wy/sofix/app/: NativeLib.java  SoFixApplication.java
app/src/main/java/com/wy/sofix/app/activities/: MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  styles.xml
app/src/test/java/com/wy/sofix/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
